# fsgitwatch

./: Cargo.toml  README.md
src/: cli.rs  error.rs  git.rs  lib.rs  main.rs  matcher.rs  output.rs  progress.rs  scanner.rs
