[package]
name = "fsgitwatch"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
git2 = "0.19"
git-url-parse = "0.4"
anyhow = "1.0"
thiserror = "2.0"
futures = "0.3"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.14"
